# real-engine

./: .gitignore  CMakeLists.txt  Readme.md  install.sh  package.sh
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/Renderer/: Renderer.cpp  Renderer.h
Sandbox/: CMakeLists.txt  main.cpp
Scripts/: build.sh  fetch_dependencies.sh  run.sh
